// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Channel Metadata Panel > should render correctly for no channel selected 1`] = `
<DocumentFragment>
  <h3
    class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-e6g60o-MuiTypography-root"
  >
    Data Channels Help
  </h3>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    There are two options to locate a channel. You can either search or use the navigation on the left.
  </p>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    Channel metadata can also be viewed. This can be displayed by clicking a channel name
  </p>
</DocumentFragment>
`;

exports[`Channel Metadata Panel > should render correctly for scalar channel with units selected 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root css-3y1137-MuiStack-root"
  >
    <h3
      class="MuiTypography-root MuiTypography-body1 css-lhsbas-MuiTypography-root"
    >
      Channel_ABCDE
    </h3>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary css-tw6tsg-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-d8i980-MuiButton-startIcon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
          />
        </svg>
      </span>
      Add this channel
    </button>
  </div>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    System name: CHANNEL_ABCDE
  </p>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    Test description
  </p>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    Channel type: scalar
  </p>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    Units: cm
  </p>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
  />
  <h4
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-13wd63j-MuiTypography-root"
  >
    Data Summary
  </h4>
  <p
    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
  >
    First data date: 2022-01-29 00:00:00
  </p>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    Most recent data date: 2023-01-31 00:00:00
  </p>
  <h5
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-13wd63j-MuiTypography-root"
  >
    Recent Data
  </h5>
  <div
    class="MuiTableContainer-root css-70zvr5-MuiTableContainer-root"
  >
    <table
      aria-label="recent data"
      class="MuiTable-root css-1xwxv7r-MuiTable-root"
    >
      <thead
        class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head css-1xtozoh-MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-g6bqb5-MuiTableCell-root"
            scope="col"
          >
            Time
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-g6bqb5-MuiTableCell-root"
            scope="col"
          >
            Data
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root css-6phqnb-MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
            scope="row"
          >
            2022-01-31 00:00:00
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
          >
            6
          </td>
        </tr>
        <tr
          class="MuiTableRow-root css-6phqnb-MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
            scope="row"
          >
            2022-01-30 00:00:00
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
          >
            5
          </td>
        </tr>
        <tr
          class="MuiTableRow-root css-6phqnb-MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
            scope="row"
          >
            2022-01-29 00:00:00
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
          >
            4
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Channel Metadata Panel > should render correctly for system channel 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root css-3y1137-MuiStack-root"
  >
    <h3
      class="MuiTypography-root MuiTypography-body1 css-lhsbas-MuiTypography-root"
    >
      Shot Number
    </h3>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary css-tw6tsg-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-d8i980-MuiButton-startIcon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
          />
        </svg>
      </span>
      Add this channel
    </button>
  </div>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    System name: shotnum
  </p>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    Channel type: scalar
  </p>
</DocumentFragment>
`;

exports[`Channel Metadata Panel > should render correctly for vector channel with units selected 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root css-3y1137-MuiStack-root"
  >
    <h3
      class="MuiTypography-root MuiTypography-body1 css-lhsbas-MuiTypography-root"
    >
      Channel_ABCDE
    </h3>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary css-tw6tsg-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-d8i980-MuiButton-startIcon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
          />
        </svg>
      </span>
      Add this channel
    </button>
  </div>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    System name: CHANNEL_ABCDE
  </p>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    Test description
  </p>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    Channel type: vector
  </p>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    Units: cm
  </p>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    Labels:
  </p>
   
  <div
    class="MuiBox-root css-1vrkypf"
  >
    <div
      class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ut1t6z-MuiChip-root"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
      >
        X
      </span>
    </div>
    <div
      class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ut1t6z-MuiChip-root"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
      >
        Y
      </span>
    </div>
    <div
      class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-1ut1t6z-MuiChip-root"
    >
      <span
        class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
      >
        Z
      </span>
    </div>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
  />
  <h4
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-13wd63j-MuiTypography-root"
  >
    Data Summary
  </h4>
  <p
    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
  >
    First data date: 2022-01-29 00:00:00
  </p>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    Most recent data date: 2023-01-31 00:00:00
  </p>
  <h5
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-13wd63j-MuiTypography-root"
  >
    Recent Data
  </h5>
  <div
    class="MuiTableContainer-root css-70zvr5-MuiTableContainer-root"
  >
    <table
      aria-label="recent data"
      class="MuiTable-root css-1xwxv7r-MuiTable-root"
    >
      <thead
        class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head css-1xtozoh-MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-g6bqb5-MuiTableCell-root"
            scope="col"
          >
            Time
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-g6bqb5-MuiTableCell-root"
            scope="col"
          >
            Data
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root css-6phqnb-MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
            scope="row"
          >
            2022-01-31 00:00:00
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
          >
            <img
              alt="Channel_ABCDE vector at 2022-01-31 00:00:00"
              src="data:image/jpeg;base64,6"
              style="border: 1px solid rgb(0, 0, 0);"
            />
          </td>
        </tr>
        <tr
          class="MuiTableRow-root css-6phqnb-MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
            scope="row"
          >
            2022-01-30 00:00:00
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
          >
            <img
              alt="Channel_ABCDE vector at 2022-01-30 00:00:00"
              src="data:image/jpeg;base64,5"
              style="border: 1px solid rgb(0, 0, 0);"
            />
          </td>
        </tr>
        <tr
          class="MuiTableRow-root css-6phqnb-MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
            scope="row"
          >
            2022-01-29 00:00:00
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
          >
            <img
              alt="Channel_ABCDE vector at 2022-01-29 00:00:00"
              src="data:image/jpeg;base64,4"
              style="border: 1px solid rgb(0, 0, 0);"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Channel Metadata Panel > should render correctly for waveform channel with units selected 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root css-3y1137-MuiStack-root"
  >
    <h3
      class="MuiTypography-root MuiTypography-body1 css-lhsbas-MuiTypography-root"
    >
      CHANNEL_CDEFG
    </h3>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorPrimary css-tw6tsg-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-d8i980-MuiButton-startIcon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
          />
        </svg>
      </span>
      Add this channel
    </button>
  </div>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    Channel type: waveform
  </p>
  <p
    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
  >
    X Units: mm
  </p>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    Y Units: J
  </p>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-1wfqwqh-MuiTypography-root"
  >
    This channel is historical
  </p>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
  />
  <h4
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-13wd63j-MuiTypography-root"
  >
    Data Summary
  </h4>
  <p
    class="MuiTypography-root MuiTypography-body2 css-7ctihp-MuiTypography-root"
  >
    First data date: 2022-01-29 00:00:00
  </p>
  <p
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ytim1c-MuiTypography-root"
  >
    Most recent data date: 2023-01-31 00:00:00
  </p>
  <h5
    class="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-13wd63j-MuiTypography-root"
  >
    Recent Data
  </h5>
  <div
    class="MuiTableContainer-root css-70zvr5-MuiTableContainer-root"
  >
    <table
      aria-label="recent data"
      class="MuiTable-root css-1xwxv7r-MuiTable-root"
    >
      <thead
        class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head css-1xtozoh-MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-g6bqb5-MuiTableCell-root"
            scope="col"
          >
            Time
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall css-g6bqb5-MuiTableCell-root"
            scope="col"
          >
            Data
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root css-6phqnb-MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
            scope="row"
          >
            2022-01-31 00:00:00
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
          >
            <img
              alt="CHANNEL_CDEFG waveform at 2022-01-31 00:00:00"
              src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/4gIoSUNDX1BST0ZJTEUAAQEAAAIYAAAAAAQwAABtbnRyUkdCIFhZWiAAAAAAAAAAAAAAAABhY3NwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAA9tYAAQAAAADTLQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAlkZXNjAAAA8AAAAHRyWFlaAAABZAAAABRnWFlaAAABeAAAABRiWFlaAAABjAAAABRyVFJDAAABoAAAAChnVFJDAAABoAAAAChiVFJDAAABoAAAACh3dHB0AAAByAAAABRjcHJ0AAAB3AAAADxtbHVjAAAAAAAAAAEAAAAMZW5VUwAAAFgAAAAcAHMAUgBHAEIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFhZWiAAAAAAAABvogAAOPUAAAOQWFlaIAAAAAAAAGKZAAC3hQAAGNpYWVogAAAAAAAAJKAAAA+EAAC2z3BhcmEAAAAAAAQAAAACZmYAAPKnAAANWQAAE9AAAApbAAAAAAAAAABYWVogAAAAAAAA9tYAAQAAAADTLW1sdWMAAAAAAAAAAQAAAAxlblVTAAAAIAAAABwARwBvAG8AZwBsAGUAIABJAG4AYwAuACAAMgAwADEANv/bAEMAAwICAwICAwMDAwQDAwQFCAUFBAQFCgcHBggMCgwMCwoLCw0OEhANDhEOCwsQFhARExQVFRUMDxcYFhQYEhQVFP/bAEMBAwQEBQQFCQUFCRQNCw0UFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFP/AABEIAB4AOAMBIgACEQEDEQH/xAAbAAABBQEBAAAAAAAAAAAAAAACAAMEBQYBCf/EADQQAAIBAgQEAggFBQAAAAAAAAECAwQRAAUSIRMxQVEGkRQiIzJScZKhFlNhgdIVQmKi0f/EABcBAQEBAQAAAAAAAAAAAAAAAAADAQL/xAAcEQEAAgMBAQEAAAAAAAAAAAABAAIRIUExYRL/2gAMAwEAAhEDEQA/APSHK1pIa6CndaZovRonMJWElBw2JNgNf9t7nbtjQU1BRysyyZdTxOAG08NTseXTnsdsUoEqzZVfiPBJFCNK62AAR9V1C23G3O+/LF5NXRpU076Zt9UZ9g/Ii9+XdR54mqPyUAT7DbK6BNRajpgqi5JiXb7YZpqGjmYrJl1PE2kOoMam6nvtse46bb47WV0bpwtM3tSqW4D7i/rdPhBwU9dGk9PJpm5lCTA+wI+XcLgrnXIAxvsMZVQaSTR0wAvvwl/5iNHTUTRuzZbTodHFQFF9ZfLY8rje1xh2rro2pjHpm9q3DtwHvYne23a5/bAZhVI6oypNc6oyeC42YWty+LThZR1yKhjfYGaZVQ/0irPoVODwHO0S/Cf0wsVuZ5Rl8lHVzcTM1kaNmGqrqlS9ibWLabXPLlyFrWwsUk4OV75vQkryp4QCVHLhP11k/wCo+ZxpKxC9M+kamWzqo6kG4H2xi8oz7L4liqyatpXhjGnhQ2Sy22NtXU8yeeJtd4xX0ZjRmc1A91Z1QIf0JG4xiZMTRw5mjDrUVsZU6kSPiXHc3Cny1Ydq42kp3CC7j1lHdgbj7gYxWV+Lp4Kw+kU6R0pux4LamLdNiBt+/QYuvxvQ/lVH0r/LHJXSPZ022JyWySLVTwFDqRVMt/ncL5gt5YeqozLTuq+/a636MNx97Yz8XjDLYNXDp511HUbKu5+rDn43ofyqj6V/lgV0/rsNtmOSVmkq1WWuU90UzzX7XQgA/O58sLFPX+LstTLa1Y6edS8T3OldzY/5YWFRPZlkfJ//2Q=="
              style="border: 1px solid rgb(0, 0, 0);"
            />
          </td>
        </tr>
        <tr
          class="MuiTableRow-root css-6phqnb-MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
            scope="row"
          >
            2022-01-30 00:00:00
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
          >
            <img
              alt="CHANNEL_CDEFG waveform at 2022-01-30 00:00:00"
              src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/4gIoSUNDX1BST0ZJTEUAAQEAAAIYAAAAAAQwAABtbnRyUkdCIFhZWiAAAAAAAAAAAAAAAABhY3NwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAA9tYAAQAAAADTLQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAlkZXNjAAAA8AAAAHRyWFlaAAABZAAAABRnWFlaAAABeAAAABRiWFlaAAABjAAAABRyVFJDAAABoAAAAChnVFJDAAABoAAAAChiVFJDAAABoAAAACh3dHB0AAAByAAAABRjcHJ0AAAB3AAAADxtbHVjAAAAAAAAAAEAAAAMZW5VUwAAAFgAAAAcAHMAUgBHAEIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFhZWiAAAAAAAABvogAAOPUAAAOQWFlaIAAAAAAAAGKZAAC3hQAAGNpYWVogAAAAAAAAJKAAAA+EAAC2z3BhcmEAAAAAAAQAAAACZmYAAPKnAAANWQAAE9AAAApbAAAAAAAAAABYWVogAAAAAAAA9tYAAQAAAADTLW1sdWMAAAAAAAAAAQAAAAxlblVTAAAAIAAAABwARwBvAG8AZwBsAGUAIABJAG4AYwAuACAAMgAwADEANv/bAEMAAwICAwICAwMDAwQDAwQFCAUFBAQFCgcHBggMCgwMCwoLCw0OEhANDhEOCwsQFhARExQVFRUMDxcYFhQYEhQVFP/bAEMBAwQEBQQFCQUFCRQNCw0UFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFP/AABEIAB4AOAMBIgACEQEDEQH/xAAbAAABBQEBAAAAAAAAAAAAAAACAAMEBQYBCf/EADQQAAIBAgQEAggFBQAAAAAAAAECAwQRAAUSIRMxQVEGkRQiIzJScZKhFlNhgdIVQmKi0f/EABcBAQEBAQAAAAAAAAAAAAAAAAADAQL/xAAcEQEAAgMBAQEAAAAAAAAAAAABAAIRIUExYRL/2gAMAwEAAhEDEQA/APSHK1pIa6CndaZovRonMJWElBw2JNgNf9t7nbtjQU1BRysyyZdTxOAG08NTseXTnsdsUoEqzZVfiPBJFCNK62AAR9V1C23G3O+/LF5NXRpU076Zt9UZ9g/Ii9+XdR54mqPyUAT7DbK6BNRajpgqi5JiXb7YZpqGjmYrJl1PE2kOoMam6nvtse46bb47WV0bpwtM3tSqW4D7i/rdPhBwU9dGk9PJpm5lCTA+wI+XcLgrnXIAxvsMZVQaSTR0wAvvwl/5iNHTUTRuzZbTodHFQFF9ZfLY8rje1xh2rro2pjHpm9q3DtwHvYne23a5/bAZhVI6oypNc6oyeC42YWty+LThZR1yKhjfYGaZVQ/0irPoVODwHO0S/Cf0wsVuZ5Rl8lHVzcTM1kaNmGqrqlS9ibWLabXPLlyFrWwsUk4OV75vQkryp4QCVHLhP11k/wCo+ZxpKxC9M+kamWzqo6kG4H2xi8oz7L4liqyatpXhjGnhQ2Sy22NtXU8yeeJtd4xX0ZjRmc1A91Z1QIf0JG4xiZMTRw5mjDrUVsZU6kSPiXHc3Cny1Ydq42kp3CC7j1lHdgbj7gYxWV+Lp4Kw+kU6R0pux4LamLdNiBt+/QYuvxvQ/lVH0r/LHJXSPZ022JyWySLVTwFDqRVMt/ncL5gt5YeqozLTuq+/a636MNx97Yz8XjDLYNXDp511HUbKu5+rDn43ofyqj6V/lgV0/rsNtmOSVmkq1WWuU90UzzX7XQgA/O58sLFPX+LstTLa1Y6edS8T3OldzY/5YWFRPZlkfJ//2Q=="
              style="border: 1px solid rgb(0, 0, 0);"
            />
          </td>
        </tr>
        <tr
          class="MuiTableRow-root css-6phqnb-MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
            scope="row"
          >
            2022-01-29 00:00:00
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall css-jiabcu-MuiTableCell-root"
          >
            <img
              alt="CHANNEL_CDEFG waveform at 2022-01-29 00:00:00"
              src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/4gIoSUNDX1BST0ZJTEUAAQEAAAIYAAAAAAQwAABtbnRyUkdCIFhZWiAAAAAAAAAAAAAAAABhY3NwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAA9tYAAQAAAADTLQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAlkZXNjAAAA8AAAAHRyWFlaAAABZAAAABRnWFlaAAABeAAAABRiWFlaAAABjAAAABRyVFJDAAABoAAAAChnVFJDAAABoAAAAChiVFJDAAABoAAAACh3dHB0AAAByAAAABRjcHJ0AAAB3AAAADxtbHVjAAAAAAAAAAEAAAAMZW5VUwAAAFgAAAAcAHMAUgBHAEIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFhZWiAAAAAAAABvogAAOPUAAAOQWFlaIAAAAAAAAGKZAAC3hQAAGNpYWVogAAAAAAAAJKAAAA+EAAC2z3BhcmEAAAAAAAQAAAACZmYAAPKnAAANWQAAE9AAAApbAAAAAAAAAABYWVogAAAAAAAA9tYAAQAAAADTLW1sdWMAAAAAAAAAAQAAAAxlblVTAAAAIAAAABwARwBvAG8AZwBsAGUAIABJAG4AYwAuACAAMgAwADEANv/bAEMAAwICAwICAwMDAwQDAwQFCAUFBAQFCgcHBggMCgwMCwoLCw0OEhANDhEOCwsQFhARExQVFRUMDxcYFhQYEhQVFP/bAEMBAwQEBQQFCQUFCRQNCw0UFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFP/AABEIAB4AOAMBIgACEQEDEQH/xAAbAAABBQEBAAAAAAAAAAAAAAACAAMEBQYBCf/EADQQAAIBAgQEAggFBQAAAAAAAAECAwQRAAUSIRMxQVEGkRQiIzJScZKhFlNhgdIVQmKi0f/EABcBAQEBAQAAAAAAAAAAAAAAAAADAQL/xAAcEQEAAgMBAQEAAAAAAAAAAAABAAIRIUExYRL/2gAMAwEAAhEDEQA/APSHK1pIa6CndaZovRonMJWElBw2JNgNf9t7nbtjQU1BRysyyZdTxOAG08NTseXTnsdsUoEqzZVfiPBJFCNK62AAR9V1C23G3O+/LF5NXRpU076Zt9UZ9g/Ii9+XdR54mqPyUAT7DbK6BNRajpgqi5JiXb7YZpqGjmYrJl1PE2kOoMam6nvtse46bb47WV0bpwtM3tSqW4D7i/rdPhBwU9dGk9PJpm5lCTA+wI+XcLgrnXIAxvsMZVQaSTR0wAvvwl/5iNHTUTRuzZbTodHFQFF9ZfLY8rje1xh2rro2pjHpm9q3DtwHvYne23a5/bAZhVI6oypNc6oyeC42YWty+LThZR1yKhjfYGaZVQ/0irPoVODwHO0S/Cf0wsVuZ5Rl8lHVzcTM1kaNmGqrqlS9ibWLabXPLlyFrWwsUk4OV75vQkryp4QCVHLhP11k/wCo+ZxpKxC9M+kamWzqo6kG4H2xi8oz7L4liqyatpXhjGnhQ2Sy22NtXU8yeeJtd4xX0ZjRmc1A91Z1QIf0JG4xiZMTRw5mjDrUVsZU6kSPiXHc3Cny1Ydq42kp3CC7j1lHdgbj7gYxWV+Lp4Kw+kU6R0pux4LamLdNiBt+/QYuvxvQ/lVH0r/LHJXSPZ022JyWySLVTwFDqRVMt/ncL5gt5YeqozLTuq+/a636MNx97Yz8XjDLYNXDp511HUbKu5+rDn43ofyqj6V/lgV0/rsNtmOSVmkq1WWuU90UzzX7XQgA/O58sLFPX+LstTLa1Y6edS8T3OldzY/5YWFRPZlkfJ//2Q=="
              style="border: 1px solid rgb(0, 0, 0);"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
